# RealTimeEdgeDetectionViewer

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/rtedge/: MainActivity.kt  MyApplication.kt
app/src/main/java/com/example/rtedge/nativebridge/: EdgeProcessor.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
gl/: build.gradle  consumer-rules.pro  proguard-rules.pro
gl/src/main/java/com/example/rtedge/gl/: EdgeGlSurfaceView.kt  EdgeRenderer.kt
jni/: CMakeLists.txt
jni/src/: edge_processor.cpp
sdk/: build.gradle
sdk/java/src/org/opencv/android/: OpenCVLoader.java
web/: package.json  tsconfig.json
web/public/: index.html
web/src/: index.ts
